# ghidra-agent-mcp

./: .gitignore  .mcp.json  .mcp.json.example  ATTRIBUTION.md  CHANGELOG.md  LICENSE  README.md  bridge_lite.py  build-portable.ps1  deploy.ps1  pom.xml  prepare.ps1  setup.bat  setup.sh
dist-templates/: QUICKSTART.txt  setup-mcp.cmd  setup-mcp.ps1  start.cmd  start.ps1  stop.ps1
docker/: Dockerfile  docker-compose.yml  entrypoint.sh  install-extensions.sh
gui/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
gui/src/: App.tsx  styles.css  vite-env.d.ts
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/capabilities/: default.json
gui/src-tauri/src/: commands.rs  compose.rs  docker_logs.rs  lib.rs  main.rs  watcher.rs
gui/src/components/: BrandMark.tsx  ContainerControl.tsx  DependencyGraph.tsx  DisconnectedBanner.tsx  DockerLogsPanel.tsx  DropZone.tsx  ImportPanel.tsx  JobsBadge.tsx  JsonView.tsx  ProgramsList.tsx  ServerStatusBar.tsx  Sidebar.tsx
gui/src/hooks/: useHealthPolling.ts  useJobs.ts  useResultsWatcher.ts
gui/src/lib/: api.ts  bridge.ts  types.ts  utils.ts
gui/src/pages/: ConsolePage.tsx  DashboardPage.tsx  ProgramDetailPage.tsx  ProgramsPage.tsx  SearchPage.tsx  SettingsPage.tsx
prompts/: vulnerability_analysis_v2.md
scripts/: capture-screenshots.mjs  check-templates.ps1
src/main/java/: CallGraphHandler.java  DataTypeHandler.java  DependencyHandler.java  FunctionHandler.java  GhidraAgentMcpServer.java  Job.java  JobManager.java  JobsHandler.java  ListingHandler.java  ModifyHandler.java  (+4 more)
(+8 files in other folders)
