[package]
name = "ghidra-agent-gui"
version = "1.0.1"
description = "Ghidra Agent MCP — desktop GUI"
edition = "2021"

[lib]
name = "ghidra_agent_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["fs", "rt-multi-thread", "sync", "macros"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
notify = "6"
anyhow = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
